tp02/vote.deploy.yml
# État final du TP03 : 3 réplicas, chacun réservant un dixième de processeur et 64 Mi de mémoire
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: vote
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 5
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
        version: "6"
    spec:
      containers:
        - name: vote
          image: ghcr.io/bngams/kube-vote:1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            # limits:
            #   cpu: 250m
            #   memory: 128Mi
