tp02/vote.pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: vote
  name: vote
spec:
  containers:
    - name: vote
      image: ghcr.io/bngams/kube-vote:1.0
      ports:
        - containerPort: 80
