tp02/vote.ingress.yml
# ingres for vote service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
  namespace: vote-app
  annotations:
    # pour activer le rewrite de l'url
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
